--- a/config/database.yml
+++ b/config/database.yml
@@ -10,12 +10,12 @@
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 #
 default: &default
-  adapter: mysql2
-  encoding: utf8
+  adapter: postgresql
+  encoding: unicode
+  host: localhost
   pool: 5
-  username: root
+  username: postg
   password: 1
-  socket: /var/run/mysqld/mysqld.sock
 
 development:
   <<: *default
